--- a/assets/styling/theme.scss
+++ b/assets/styling/theme.scss
@@ -56,6 +56,13 @@ body {
   /* CSS rules for screens with a maximum width of 600px or less */
   .logo-container {
     width: 100%;
+    margin-top: -1em;
+    margin-bottom: -1em;
+  }
+
+  .logo {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
   }
 }
 
